test/errors/local_scopes1.rcasm
!let aa = 0

!if (aa == 0) {
    !let xx = 0
    !let xx = 1  ; duplicate variable
    ldi a,xx
}

!if (aa == 0) {
    !let xx = 1
    ldi a,xx
}
    ldi a,2